Fixed interface jumping with invalid word

--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ p {
     margin-top: 4px;
     display: inline-block;
 }
+
+.error {
+    position: fixed;
+    height: 150px;
+    width: 700px;
+    margin-top: 100px;
+    margin-left: -100px;
+}
